# Drawer

./: .eslintrc.js  LICENSE  README.md  index.html  package.json  vite.config.js  vue.config.js
public/: clipboard-listen  worker.html
src/: App.vue  background.js  clipboard.js  db.js  event-topic.js  main.js  worker.js
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  event.rs  main.rs  setup.rs  storage.rs  util.rs
src-tauri/src/clipboard/: clipboard.rs  clipboard_manager.rs  mod.rs
src-tauri/src/clipboard/backend/: mod.rs
src-tauri/src/clipboard/backend/mac/: clipboard.rs  mod.rs  util.rs
src-tauri/swift-lib/: .gitignore  Package.swift
src-tauri/swift-lib/src/: lib.swift
src/components/: HelloWorld.vue  Tags.vue
src/components/Card/: BaseCard.vue  Card.vue  ColorCard.vue  FileCard.vue  ImgCard.vue  RtfCard.vue  TextCard.vue  UrlCard.vue
src/main/: main.js  tray.js
src/render/: App.vue  main.js
src/render/components/: Tags.vue
src/render/components/Card/: BaseCard.vue  Card.vue  FileCard.vue  RtfCard.vue
src/render/views/: Drawer.vue
src/router/: index.js
src/utils/: event-topic.js
src/views/: Drawer.vue  Settings.vue
src/worker/: db.js  service.js  worker.js
