[package]
name = "drawer"
version = "0.2.0"
description = "A Tauri App"
authors = ["XUQING"]
license = ""
repository = "https://github.com/xxxuuu/Drawer"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }
swift-rs = { git = "https://github.com/Brendonovich/swift-rs.git", branch = "autorelease", features = [
  "build",
] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all", "macos-private-api", "system-tray"] }
rusqlite = { version = "0.28.0", features = ["bundled", "array"] }
window-vibrancy = "0.3.1"
clipboard-master = "3.1.3"
chrono = "0.4.23"
base64 = "0.13.1"
cfg-if = "1.0.0"
imagesize = "0.10.1"
urlencoding = "2.1.2"

[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.24.0"
objc = "0.2.7"
swift-rs = { git = "https://github.com/Brendonovich/swift-rs.git", branch = "autorelease" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
